@startuml
title Class Diagram - Use Case: Quản lý thông tin cá nhân
skinparam classAttributeIconSize 0

class AccountController {
  + viewAccountPage(): String
  + updateProfile(req: UpdateProfileRequest): String
  + changePassword(req: ChangePasswordRequest): String
  + addAddress(req: AddressRequest): String
  + updateAddress(id: Long, req: AddressRequest): String
  + deleteAddress(id: Long): String
  + setDefaultAddress(id: Long): String
}

class CustomerService {
  + getCustomerByUserId(userId: Long): Customer
  + updateProfile(userId: Long, req: UpdateProfileRequest): Customer
}

class AddressService {
  + addAddress(customerId: Long, req: AddressRequest): Address
  + updateAddress(addressId: Long, req: AddressRequest): Address
  + deleteAddress(addressId: Long): void
  + setDefaultAddress(customerId: Long, addressId: Long): void
}

class AuthService {
  + changePassword(userId: Long, req: ChangePasswordRequest): void
}

class User {
  - id: Long
  - email: String
  - passwordHash: String
  + setPasswordHash(hash: String): void
}

class Customer {
  - id: Long
  - fullName: String
  - gender: String
  - dob: LocalDate
  - phone: String
  - user: User
}

class Address {
  - id: Long
  - recipientName: String
  - phone: String
  - province: String
  - district: String
  - ward: String
  - streetAddress: String
  - isDefault: boolean
  - isDeleted: boolean
  - customer: Customer
}

AccountController --> CustomerService : uses
AccountController --> AddressService : uses
AccountController --> AuthService : uses

CustomerService ..> Customer : updates
AddressService ..> Address : creates/updates
AuthService ..> User : updates

Customer "1" -- "1..*" Address : has
Customer "1" -- "1" User : maps to
@enduml